@@ -32,6 +32,7 @@ cruisecontrol.sh:
 CVS:
 ----------------------
 * Add module attribute so it can work with no local working copy (CC-149). Patch by Lars Gehrken
+* Updated documentation and class comments to correctly reflect the required attributes after the module change (CC-207). Patch by Mark Doliner
 
 CVSBootstrapper:
 ----------------------
